<resources>
    <string name="app_name">Morelia Clima</string>
    <string name="morelia">Morelia</string>
    <string name="temperature">Temperatura:</string>
    <string name="celcius_degrees">° C</string>
    <string name="location">Tecnologico Nacional de Mexico Campus Morelia</string>
    <string name="sensor">Sensor DS18B20 (Desactivado)</string>
    <string name="api_name">Open Weather</string>
    <string name="api_domain">openweathermap.org</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Setting fragment -->
    <string name="settings">Configuraciones</string>
    <string name="temperature_units">Unidades de temperatura</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celcius">Centigrados</string>

</resources>